Use (List|Set).of() where feasible